# message-queue

./: Cargo.toml  README.md  consumer.py  docker-compose.yml  producer.py
consumer/: Dockerfile  consumer.py  wait_for_kafka_up.sh
consumer/proto/: __init__.py  logs_pb2_grpc.py
kafka-docker/: docker-compose.yml
producer/: Dockerfile  producer.py  wait_for_kafka_up.sh
rust_grpc_service/: Cargo.toml  Dockerfile  build.rs
rust_grpc_service/proto/: logs.proto  logs_pb2.py
rust_grpc_service/src/: main.rs
rust_kafka_consumer/: Cargo.toml  Dockerfile  wait_for_kafka_up.sh
rust_kafka_consumer/src/: main.rs
